Fix bug #15447
Now, the access of a given process instance is checked against the
list of process instances available for the current active user.